opam-version: "2.0"
synopsis: "Astro, Reason React and Melange"
description: "Astro, Reason React, Melange and Tailwind"
maintainer: ["Paul Bacchus"]
authors: ["Paul Bacchus"]
license: "MIT"
homepage: "https://github.com/psb/astro-reason"
bug-reports: "https://github.com/psb/astro-reason/issues"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8"}
  "melange" {>= "1.0.0"}
  "reactjs-jsx-ppx" {>= "1.0.0"}
  "reason-react" {>= "0.11.0"}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
  "ocamlformat" {>= "0.25.0"}
  "melange-fetch" {dev}
]
pin-depends: [
    ["melange-fetch.dev" "git+https://github.com/melange-community/melange-fetch.git#master"]
]
dev-repo: "git+https://github.com/psb/astro-reason.git"
