(lang dune 3.8)

(using melange 0.1)

(name astro-with-a-sprinkle-of-reason)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/astro-with-a-sprinkle-of-reason)

(bug_reports https://github.com/psb/astro-with-a-sprinkle-of-reason/issues)

(package
 (allow_empty)
 (name astro-with-a-sprinkle-of-reason)
 (synopsis "Astro, Reason React and Melange")
 (description "Astro, Reason React and Melange"))
