(lang dune 3.8)

(using melange 0.1)

(name astro-reason)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/astro-reason)

(bug_reports https://github.com/psb/astro-reason/issues)

(package
 (allow_empty)
 (name astro-reason)
 (synopsis "Astro, Reason React and Melange")
 (description "Astro, Reason React and Melange"))
