(melange.emit
 (target reason_react_output)
 (alias react)
 (promote (until-clean))
 (libraries reason-react melange-fetch bs_json components)
 (preprocess
  (pps reactjs-jsx-ppx))
 (module_systems es6))

(melange.emit
 (target reason_node_output)
 (alias node)
 (promote (until-clean))
 (libraries lambdas)
 (module_systems commonjs))
